--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,147 +5,98 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  create-release:
-    runs-on: ubuntu-latest
-    outputs:
-      release_id: ${{ steps.create-release.outputs.result }}
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Get version from tag
-        id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
-      
-      - name: Create Release
-        id: create-release
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { data } = await github.rest.repos.createRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              tag_name: '${{ steps.get_version.outputs.VERSION }}',
-              name: 'Release ${{ steps.get_version.outputs.VERSION }}',
-              body: 'Release ${{ steps.get_version.outputs.VERSION }}',
-              draft: false,
-              prerelease: false
-            });
-            return data.id
-
   build:
-    needs: create-release
+    runs-on: ${{ matrix.platform.runner }}
     strategy:
       matrix:
-        include:
-          - os: ubuntu-latest
+        platform:
+          - runner: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            artifact_name: git-remote-codecommit
-            asset_name: git-remote-codecommit-linux-x86_64
-          - os: ubuntu-latest
+          - runner: ubuntu-latest
             target: aarch64-unknown-linux-gnu
-            artifact_name: git-remote-codecommit
-            asset_name: git-remote-codecommit-linux-aarch64
-          - os: windows-latest
-            target: x86_64-pc-windows-msvc
-            artifact_name: git-remote-codecommit.exe
-            asset_name: git-remote-codecommit-windows-x86_64.exe
-          - os: macos-latest
-            target: x86_64-apple-darwin
-            artifact_name: git-remote-codecommit
-            asset_name: git-remote-codecommit-macos-x86_64
-          - os: macos-latest
+          - runner: macos-latest
             target: aarch64-apple-darwin
-            artifact_name: git-remote-codecommit
-            asset_name: git-remote-codecommit-macos-aarch64
-
-    runs-on: ${{ matrix.os }}
-    
+          - runner: macos-latest
+            target: x86_64-apple-darwin
+          - runner: windows-latest
+            target: x86_64-pc-windows-msvc
+      fail-fast: false
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
-      
-      - name: Install cross-compilation tools
-        if: matrix.target == 'aarch64-unknown-linux-gnu'
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: cargo-bins/cargo-binstall@main
+
+      - name: Set up Environment
+        shell: bash
+        run: rustup target add ${{ matrix.platform.target }}
+      - name: Set up Windows Environment
+        shell: bash
         run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu
-          echo "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
-      
-      - name: Cache cargo registry
-        uses: actions/cache@v4
+          git config --global core.longpaths true
+          cargo install --target-dir=target -v cargo-vcpkg
+          cargo vcpkg -v build
+        if: runner.os == 'Windows'
+      - name: Set up MacOS Environment
+        run: brew install autoconf automake libtool
+        if: runner.os == 'macOS'
+
+      - name: Build git-remote-codecommit
+        run: cargo build --release --target=${{ matrix.platform.target }} --verbose 
+
+      - name: Rename Binary
+        run: cp target/${{ matrix.platform.target }}/release/git-remote-codecommit target/git-remote-codecommit-${{ runner.os }}-${{ matrix.platform.target }}
+        if: runner.os != 'Windows'
+      - name: Rename Binary
+        run: cp target/${{ matrix.platform.target }}/release/git-remote-codecommit.exe target/git-remote-codecommit-${{ runner.os }}-${{ matrix.platform.target }}.exe
+        if: runner.os == 'Windows'
+
+      - name: Upload Binary Artifacts
+        uses: actions/upload-artifact@v4
         with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-registry-
-      
-      - name: Cache cargo index
-        uses: actions/cache@v4
+          name: git-remote-codecommit-${{ runner.os }}-${{ matrix.platform.target }}
+          path: target/git-remote-codecommit-${{ runner.os }}-${{ matrix.platform.target }}*
+
+  release:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Download Binary Artifacts
+        uses: actions/download-artifact@v4
         with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-index-
-      
-      - name: Cache cargo build
-        uses: actions/cache@v4
-        with:
-          path: target
-          key: ${{ runner.os }}-cargo-build-target-${{ matrix.target }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-build-target-${{ matrix.target }}-
-      
-      - name: Build
-        run: cargo build --release --target ${{ matrix.target }}
-      
-      - name: Strip binary (Linux and macOS)
-        if: matrix.os != 'windows-latest'
-        run: strip target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
-      
-      - name: Create archive (Linux and macOS)
-        if: matrix.os != 'windows-latest'
+          path: bin
+          pattern: git-remote-codecommit-*
+          merge-multiple: true
+
+      - name: List Binaries
         run: |
-          cd target/${{ matrix.target }}/release
-          tar -czf ../../../${{ matrix.asset_name }}.tar.gz ${{ matrix.artifact_name }}
-      
-      - name: Create archive (Windows)
-        if: matrix.os == 'windows-latest'
+          ls -lah bin/
+          file bin/*
+      - name: Create Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ github.ref_name }}
+          run: ${{ github.run_number }}
         run: |
-          cd target/${{ matrix.target }}/release
-          7z a ../../../${{ matrix.asset_name }}.zip ${{ matrix.artifact_name }}
-      
-      - name: Upload Release Asset (Linux and macOS)
-        if: matrix.os != 'windows-latest'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const fs = require('fs');
-            await github.rest.repos.uploadReleaseAsset({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              release_id: ${{ needs.create-release.outputs.release_id }},
-              name: '${{ matrix.asset_name }}.tar.gz',
-              data: fs.readFileSync('${{ matrix.asset_name }}.tar.gz')
-            });
-      
-      - name: Upload Release Asset (Windows)
-        if: matrix.os == 'windows-latest'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const fs = require('fs');
-            await github.rest.repos.uploadReleaseAsset({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              release_id: ${{ needs.create-release.outputs.release_id }},
-              name: '${{ matrix.asset_name }}.zip',
-              data: fs.readFileSync('${{ matrix.asset_name }}.zip')
-            });
+          if [[ "${{ github.event.inputs.pre-release }}" == "false" ]]; then
+            RELEASE_TYPE_NAME=Release
+            PRERELEASE_ARG=
+          else
+            RELEASE_TYPE_NAME=Pre-Release
+            PRERELEASE_ARG=--prerelease
+          fi
+          
+          today=$(date '+%Y-%m-%d')
+          gh release create "$today-$tag-$run" \
+              --repo="$GITHUB_REPOSITORY" \
+              --title="git-remote-codecommit $RELEASE_TYPE_NAME $today-$tag #$run" \
+              --target="$tag" \
+              --generate-notes \
+              $PRERELEASE_ARG \
+              bin/git-remote-codecommit-*
