--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,8 @@ jobs:
         platform:
           - runner: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-          - runner: ubuntu-latest
-            target: aarch64-unknown-linux-gnu
+          # - runner: ubuntu-latest
+          #   target: aarch64_unknown_linux_gnu
           - runner: macos-latest
             target: aarch64-apple-darwin
           - runner: macos-latest
